# Poker-Game-Analyzer

./: .gitignore  .pre-commit-config.yaml  AnalysisLogic.MD  Architecture.MD  AuditFindings.MD  Contributing.MD  DataStructure.MD  EVExpansionPlan.MD  LICENSE  README.MD  TODO.MD  TestingStrategy.MD  UserExperience.MD  UserGuide.MD  pyproject.toml  run.py
.github/: copilot-instructions.md
data/: .gitignore
data/histories/: HH20260119 Melpomene V - 100-200 - Play Money No Limit Hold'em.txt  HH20260119 Merope VI - 100-200 - Play Money No Limit Hold'em.txt  HH20260120 Dejanira V - 250-500 - Play Money No Limit Hold'em.txt  HH20260120 T3966196868 No Limit Hold'em 44K + 6,000.txt  HH20260120 Zoya V - 100-200 - Play Money No Limit Hold'em.txt  HH20260121 T3966198430 No Limit Hold'em 44K + 6,000.txt  HH20260126 Saiph VII - 250-500 - Play Money No Limit Hold'em.txt  HH20260127 Krethon VI - 1,000-2,000 - Play Money No Limit Hold'em.txt  HH20260128 Minerva VII - 1,000-2,000 - Play Money No Limit Hold'em.txt  HH20260129 Fraternitas VII - 100-200 - Play Money No Limit Hold'em.txt  HH20260129 Vibilia VI - 100-200 - Play Money No Limit Hold'em.txt  HH20260130 Luscinia VII - 100-200 - Play Money No Limit Hold'em.txt  HH20260130 Ostara VII - 100-200 - Play Money No Limit Hold'em.txt  HH20260130 T3968324261 No Limit Hold'em 13K + 1,800.txt  (+12 more)
src/pokerhero/: config.py
tests/: test_analysis.py  test_app_layout.py  test_dashboard.py  test_database.py  test_frontend.py  test_guide.py  test_ingestion.py  test_parser.py  test_sessions.py  test_settings.py  test_upload.py
(+41 files in other folders)
