[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pokerhero"
version = "0.1.0"
requires-python = ">=3.13"
license = {text = "MIT"}
dependencies = [
    "pandas",
    "numpy",
    "pokerkit",
    "dash",
    "diskcache",
    "multiprocess",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "pre-commit",
    "pandas-stubs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pokerhero"]

[tool.ruff]
src = ["src"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
